...
          Padding(
            padding: EdgeInsets.all(10),
            child: Row(
              mainAxisAlignment: MainAxisAlignment.center,
              children: [
                ElevatedButton(
                  key: Key("crearBarcoGrandeButton"),
                  onPressed: () {
                    _aniadirGrande();
                  },
                  child: Text('Crear Barco Grande'),
                ),
                SizedBox(width: 10),
...
                        key: Key("enviarComentarioButton"),
                        onPressed: () {
                          if (_nuevoComentario.text.isNotEmpty) {
                            _addComentario();
                          }
                        },
                        child: Text('Enviar')),
                    //onPressed: _addComentario, child: Text('Enviar')),
                  ),
                  Container(
                    margin: EdgeInsets.all(10),
                    child: ElevatedButton(
                      onPressed: () {
...
        Usuario nuevoUser = Usuario(nombre, correo, contrasena);
        autenticacion.registrarUsuario(nuevoUser);
        // Mostrar un diálogo de registro exitoso
        showDialog(
          context: context,
          builder: (context) => AlertDialog(
            title: Text('Registro exitoso'),
            content: Text('Su cuenta ha sido registrada con éxito.'),
            actions: [
              TextButton(
                onPressed: () {
                  Navigator.pop(context);
                  Navigator.pop(context);
                  Navigator.push(
                    context,
                    MaterialPageRoute(
                        builder: (context) => inicioApp(usuario: nuevoUser)),
                  );
                },
                child: Text('Aceptar'),
              ),
            ],
          ),
        );
      }
    } else {
...
                labelText: 'Contraseña',
              ),
              obscureText: true,
            ),
            ElevatedButton(
              onPressed: _registrar,
              child: Text('Registrar'),
            ),
            Text(
              _mensajeError,
              style: TextStyle(
                color: Colors.red,
              ),
...
                context,
                MaterialPageRoute(
                    builder: (context) =>
                        creacionBarco(usuario: widget.usuario)),
              );
            },
            child: Text('Añadir Barco'),
            style: ButtonStyle(
              backgroundColor:
                  MaterialStateProperty.all<Color>(Colors.blueGrey),
            ),
          ),
          SizedBox(width: 16), // Espacio entre los botones
...
              Navigator.push(
                context,
                MaterialPageRoute(
                    builder: (context) => creacionPez(usuario: widget.usuario)),
              );
            },
            child: Text('Foro'),
            style: ButtonStyle(
              backgroundColor:
                  MaterialStateProperty.all<Color>(Colors.blueGrey),
            ),
          ),
        ],
...
